# fish-detection-classification

./: .gitignore  LICENSE  README.md  fish_timeline_viewer.py  main.py  pyproject.toml  requirements.txt  simple_plot.py
.superpowers/brainstorm/89428-1776683040/content/: approaches.html  (+1 more)
data/fish_detection_output/: fish_results.json  fish_scores.pkl
docs/superpowers/plans/: 2026-04-20-segment-identification.md  2026-04-20-timeline-viewer-redesign.md
docs/superpowers/specs/: 2026-04-20-segment-identification-design.md  2026-04-20-timeline-viewer-redesign.md
fish_detection/: feature_extraction.py  fish-detection.py  fish_detection.py  segment_utils.py
notebooks/: temporal_pooling_train_and_validation.ipynb
notebooks/model_optimization_20260420_101150_multiseed/: LogisticRegression_best_model.joblib  LogisticRegression_best_model_meta.json  LogisticRegression_seed_summary.json  SVM_best_model.joblib  SVM_best_model_meta.json  SVM_seed_summary.json  random_seeds.json
notebooks/model_optimization_20260420_101150_multiseed/LogisticRegression/: best_params.json  performance_summary.txt  random_search_results.csv
notebooks/model_optimization_20260420_101150_multiseed/SVM/: best_params.json  performance_summary.txt  random_search_results.csv
notebooks/model_optimization_20260420_101150_multiseed/seed_15/: LogisticRegression_metrics.json  LogisticRegression_model.joblib  LogisticRegression_results.csv  SVM_metrics.json  SVM_model.joblib  SVM_results.csv
tests/: test_feature_extraction.py  test_segment_identification.py
viewer/: app.js  index.html  style.css
(+65 files in other folders)
